# thisanimalnolongerexists

./: .editorconfig  .env.example  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
.cargo/: config
src/: lib.rs  main.rs
static/: main.css
templates/: about.html  base.html  index.html
