[package]
name = "wantedspecies"
version = "0.1.0"
authors = ["Dimtion <zizou.xena@gmail.com>"]
edition = "2018"
default-run = "wantedspecies"

[dependencies]
actix-web = {version = "2.0", features = ["rustls"] }
actix-rt = "1.0"
actix-files = "0.2"
askama = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
csv = "1.1"
rand = "0.7.3"
slug = "0.1"
regex = "1.3"
dotenv = "0.15"

[build-dependencies]
askama = "0.8"

